Chapter14/force-app/main/default/objects/RaceData__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oil Pressure</fullName>
            </value>
            <value>
                <fullName>Engine Temperature</fullName>
            </value>
            <value>
                <fullName>Track Temperature</fullName>
            </value>
            <value>
                <fullName>Tyre Temperature</fullName>
            </value>
            <value>
                <fullName>Sector Time</fullName>
            </value>
            <value>
                <fullName>Fuel Level</fullName>
            </value>
            <value>
                <fullName>Pitstop Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>